# nelson-minimalist-core

./: .gitignore  .prettierignore  BUILDING.md  BUILDING_Linux.md  BUILDING_Windows.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  NelSon.sln  NelsonConfig.cmake.in  README.md  THIRDPARTY.md  environment-dev.yml  nelson-minimalist-core.sln  package.json
modules/: CMakeLists.txt
modules/api_nelson/: CMakeLists.txt
modules/api_nelson/src/c/: nlsApi_nelson.vcxproj  nlsApi_nelson.vcxproj.filters  resources.rc
modules/assert_functions/: CMakeLists.txt
modules/assert_functions/builtin/c/: nlsAssert_functions_builtin.vcxproj  nlsAssert_functions_builtin.vcxproj.filters  resources.rc
modules/assert_functions/builtin/cpp/: Gateway.cpp
modules/assert_functions/src/c/: nlsAssert_functions.vcxproj  resources.rc
modules/assert_functions/tests/: test_assert_isapprox.m
modules/characters_encoding/: CMakeLists.txt
modules/characters_encoding/builtin/c/: resources.rc
modules/characters_encoding/no-src/c/: no-nlsCharacters_encoding.vcxproj  no-nlsCharacters_encoding.vcxproj.filters  resources.rc
modules/characters_encoding/no-src/cpp/: characters_encoding.cpp
modules/characters_encoding/src/c/: resources.rc
modules/commons/: CMakeLists.txt
modules/commons/src/c/: nlsCommons.vcxproj  nlsCommons.vcxproj.filters  resources.rc
modules/commons/src/cpp/: FileSystemWrapper.cpp  UuidHelpers.cpp
modules/commons/src/include/: FileSystemWrapper.hpp  Nelson_VERSION.h.in  Nelson_VERSION.h.vc  lapack_eigen_config.hpp  nlsBuildConfig.h.in  nlsBuildConfig.h.vc
modules/console/: CMakeLists.txt
modules/console/builtin/c/: nlsConsole_builtin.vcxproj  nlsConsole_builtin.vcxproj.filters  resources.rc
modules/console/builtin/cpp/: Gateway.cpp
modules/console/builtin/include/: console_Gateway.hpp
modules/console/src/c/: nlsConsole.vcxproj  nlsConsole.vcxproj.filters  resources.rc
modules/constructors_functions/: CMakeLists.txt
modules/constructors_functions/builtin/c/: resources.rc  (+2 more)
modules/constructors_functions/tests/: test_ones.m
modules/core/: CMakeLists.txt
modules/core/tests/: fun_evalin2.m  run_file1.m  test_eval.m  test_evalc.m  test_evalin.m  test_inputname.m  test_nargin.m  test_narginchk.m  test_nargout.m  test_nargoutchk.m  test_nfilename.m  test_run.m
modules/data_analysis/: CMakeLists.txt
modules/data_analysis/tests/: test_conv2.m  test_cumprod.m
modules/data_structures/: CMakeLists.txt
modules/data_structures/tests/: test_cellfun.m  test_struct.m  test_struct_isequal.m  test_struct_isequaln.m
modules/debugger/: CMakeLists.txt
modules/display_format/: CMakeLists.txt
modules/display_format/tests/: test_display.m
modules/double/: CMakeLists.txt
modules/double/tests/: test_double_ge_double.m  test_flintmax.m
modules/elementary_functions/: CMakeLists.txt
modules/elementary_functions/tests/: test_cast.m  test_ceil.m  test_empty_matrix.m  test_exp.m  test_find.m  test_floor.m  test_isapprox.m  test_isequal.m  test_isequaln.m  test_isfinite.m  test_isinf.m  test_isnan.m  test_mod.m  test_ndims.m  test_num2bin.m  test_permute.m  test_repmat.m  test_round.m  test_sign.m  test_size.m  test_tril.m  test_triu.m
modules/elementary_mathematics/: CMakeLists.txt
modules/engine/: CMakeLists.txt
modules/error_manager/: CMakeLists.txt
modules/error_manager/tests/: test_MException.m  test_getLastReport.m  test_lastwarn.m  test_throw.m  test_throwAsCaller.m
modules/files_folders_functions/: CMakeLists.txt
modules/files_folders_functions/tests/: test_diff_file.m  test_fileparts.m  test_fullfile.m  test_isfolder.m
modules/function_handle/: CMakeLists.txt
modules/function_handle/tests/: test_function_anonymous.m  test_function_handle.m  test_str2func.m
modules/functions_manager/: CMakeLists.txt
modules/functions_manager/tests/: test_addpath_1.m  test_ismacro.m
modules/i18n/: CMakeLists.txt
modules/integer/: CMakeLists.txt
modules/integer/tests/: test_integer_minus.m  test_integer_plus.m  test_mtimes.m
modules/interpreter/: CMakeLists.txt
modules/interpreter/tests/: test_colon_as_string.m  test_for_loop.m  test_function_name.m  test_simple_assign.m  test_varargout.m
modules/linear_algebra/: CMakeLists.txt
modules/linear_algebra/tests/: test_det.m  test_expm.m  test_schur.m  test_sqrtm.m
modules/localization/: CMakeLists.txt
modules/logical/: CMakeLists.txt
modules/main/: CMakeLists.txt
modules/memory_manager/: CMakeLists.txt
modules/memory_manager/tests/: test_persistent_example.m  test_varlock.m
modules/mex/: CMakeLists.txt
modules/nelson_manager/: CMakeLists.txt
modules/operators/: CMakeLists.txt
modules/operators/tests/: test_addition.m  test_ctranspose.m
modules/os_functions/: CMakeLists.txt
modules/overload/: CMakeLists.txt
modules/profiler/: CMakeLists.txt
modules/single/: CMakeLists.txt
modules/statistics/: CMakeLists.txt
modules/statistics/tests/: test_corrcoef.m
modules/stream_manager/: CMakeLists.txt
modules/stream_manager/tests/: test_fprintf.m
modules/string/: CMakeLists.txt
modules/string/tests/: test_append.m  test_convertCharsToStrings.m  test_convertStringsToChars.m  test_deblank.m  test_int2str.m  test_isletter.m  test_mat2str.m  test_num2str.m  test_replace.m  test_strcat.m  test_strfind.m  test_string.m  test_string_parser.m  test_strrep.m  test_strtrim.m  test_tolower.m  test_toupper.m
modules/terminal/: CMakeLists.txt
modules/text_completion/: CMakeLists.txt
modules/time/: CMakeLists.txt
modules/time/tests/: test_datevec.m
modules/trigonometric_functions/: CMakeLists.txt
modules/trigonometric_functions/tests/: test_acos.m  test_asin.m  test_atan.m  test_cos.m  test_cosh.m  test_sin.m  test_sinh.m  test_tan.m  test_tanh.m
modules/types/: CMakeLists.txt
modules/types/tests/: test_class.m  test_isclass.m  test_isempty.m  test_isfloat.m  test_islogical.m  test_isnumeric.m  test_isreal.m  test_issingle.m  test_issparse.m  test_isstruct.m
modules/validators/: CMakeLists.txt
modules/validators/tests/: test_mustBeFile.m  test_mustBeNonSparse.m
(+418 files in other folders)
